--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container"> <!-- Main Container -->
-    <img src="images/image-qr-code.png" alt="QR-Code Image">
+    <img src="image-qr-code.png" alt="QR-Code Image">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend mentor and take your coding skills to the next level</p>
   </div>
