--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <!-- Stylesheet link -->
   <title>Frontend Mentor | QR code component</title>
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container"> <!-- Main Container -->
-    <img src="image-qr-code.png" alt="QR-Code Image">
+    <img src="./image-qr-code.png" alt="QR-Code Image">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend mentor and take your coding skills to the next level</p>
   </div>
